#45: Fixes